--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
 .hero {
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .8)), url('./Assets/penang.jpg') no-repeat center / cover;
+	background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .8)), url('assets/penang.jpg') no-repeat center / cover;
 	color: white;
 }
 
